chore: add query param in the swagger api docs
